nambah contoh dalam bahasa c

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"*.ejs": "html",
 		"*.js": "javascript",
-		"ostream": "cpp"
+		"ostream": "cpp",
+		"iostream": "cpp"
 	}
+	"editor.fontSize":19,
 }
